  not represent the complete raw value (including child tags etc.). It
  now serialises the complete content on read and replaces the
  complete content by a string on write.

* Target parser didn't call ``.close()`` on the target object if
  parsing failed.  Now it is guaranteed that ``.close()`` will be
  called after parsing, regardless of the outcome.

Other changes
-------------

* ``Element.attrib`` no longer uses a cyclic reference back to its
  Element object.  It therefore no longer requires the garbage
  collector to clean up.

* Static builds include libiconv, in addition to libxml2 and libxslt.


2.2.4 (2009-11-11)
==================

Bugs fixed
----------

* Static build of libxml2/libxslt was broken.


2.2.3 (2009-10-30)
==================

Features added
--------------

Bugs fixed
----------

* The ``resolve_entities`` option did not work in the incremental feed
  parser.

* Looking up and deleting attributes without a namespace could hit a
  namespaced attribute of the same name instead.

* Late errors during calls to ``SubElement()`` (e.g. attribute related
  ones) could leave a partially initialised element in the tree.

* Modifying trees that contain parsed entity references could result
  in an infinite loop.

* ObjectifiedElement.__setattr__ created an empty-string child element when the
  attribute value was rejected as a non-unicode/non-ascii string

* Syntax errors in ``lxml.cssselect`` could result in misleading error
  messages.

* Invalid syntax in CSS expressions could lead to an infinite loop in
  the parser of ``lxml.cssselect``.

* CSS special character escapes were not properly handled in
  ``lxml.cssselect``.

* CSS Unicode escapes were not properly decoded in ``lxml.cssselect``.

* Select options in HTML forms that had no explicit ``value``
  attribute were not handled correctly.  The HTML standard dictates
  that their value is defined by their text content.  This is now
  supported by lxml.html.
