@@ -94,6 +94,9 @@ Bugs fixed
 Other changes
 -------------
 
+* Static MS Windows builds can now download their dependencies
+  themselves.
+
 * ``Element.attrib`` no longer uses a cyclic reference back to its
   Element object.  It therefore no longer requires the garbage
   collector to clean up.
